2012-01-21  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tcl.h:        [Bug-3474726]: Eliminate detection of struct
	* generic/tclWinPort.h: _stat32i64, just use _stati64 in combination
	* generic/tclFCmd.c:    with _USE_32BIT_TIME_T, which is the same then.
	* generic/tclTest.c:    Only keep _stat32i64 usage for cygwin, so it
	* win/configure.in:     will not conflict with cygwin's own struct stat.
	* win/configure:

2012-01-21  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclCmdMZ.c:	[Bug 3475667] Prevent buffer read overflow.
	Thanks to "sebres" for the report and fix.

2012-01-17  Donal K. Fellows  <dkf@users.sf.net>

	* doc/dict.n (dict with): [Bug 3474512]: Explain better what is going
	on when a dictionary key and the dictionary variable collide.

2012-01-17  Don Porter  <dgp@users.sourceforge.net>

	* library/http/http.tcl:	Bump to version 2.7.8
	* library/http/pkgIndex.tcl:
	* unix/Makefile.in:
	* win/Makefile.in:

2012-01-13  Donal K. Fellows  <dkf@users.sf.net>

	* library/http/http.tcl (http::Connect): [Bug 3472316]: Ensure that we
	only try to read the socket error exactly once.

2012-01-09  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tclUtf.c:      [Bug 3464428] string is graph \u0120 is wrong
	* generic/regc_locale.c: Add table for Unicode [:cntrl:] class
	* tools/uniClass.tcl:    Generate Unicode [:cntrl:] class table
	* tests/utf.test:

2012-01-08  Kevin B. Kenny  <kennykb@acm.org>

	* library/clock.tcl (ReadZoneinfoFile): Corrected a bug where loading
	* tests/clock.test (clock-56.4):        zoneinfo would fail if one
	timezone abbreviation was a proper tail of another, and zic used the
	same bytes of the file to represent both of them.  Added a test case
	for the bug, using the same data that caused the observed failure
	"in the wild." [Bug 3470928]

2011-12-30  Venkat Iyer <venkat@comit.com>

	* library/tzdata/America/Bahia : Update to Olson's tzdata2011n
	* library/tzdata/America/Havana
	* library/tzdata/Europe/Kiev