@@ -222,9 +222,7 @@ test dict-9.2 {dict exists command} {dict exists {a b} b} 0
 test dict-9.3 {dict exists command} {dict exists {a {b c}} a b} 1
 test dict-9.4 {dict exists command} {dict exists {a {b c}} a c} 0
 test dict-9.5 {dict exists command} {dict exists {a {b c}} b c} 0
-test dict-9.6 {dict exists command} {
-    list [catch {dict exists {a {b c d}} a c} msg] $msg
-} {1 {missing value to go with key}}
+test dict-9.6 {dict exists command} {dict exists {a {b c d}} a c} 0
 test dict-9.7 {dict exists command} {
     list [catch {dict exists} msg] $msg
 } {1 {wrong # args: should be "dict exists dictionary key ?key ...?"}}
